finish all elements
hopefully it's okay

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             </div>
             <div class="header-right">
                 <ul>
-                    <li>header link one</li>
-                    <li>header link two</li>
-                    <li>header link three</li>
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#"> header link two</a></li>
+                    <li><a href="#"> header link three</a></li>
                 </ul>
             </div>
         </div>
@@ -36,28 +36,57 @@
         </div>
     </div>
 
-    <div class="content-white">
-        <h2>Some random information</h2>
-        <div class="rounded-boxes">
-            <div class="big-box"> 
-                <div class="box"></div>
-                <div class="text">There is something under here.</div>
-            </div>
-            <div class="big-box"> 
-                <div class="box"></div>
-                <div class="text">There is something under here.</div>
-            </div>
-            <div class="big-box"> 
-                <div class="box"></div>
-                <div class="text">There is something under here.</div>
-            </div>
-            <div class="big-box"> 
-                <div class="box"></div>
-                <div class="text">There is something under here.</div>
+    <div class="content">
+
+        <!-- CONTENT-WHITE -->
+        <div class="content-white">
+            <h2>Some random information</h2>
+            <div class="rounded-boxes">
+                <div class="big-box"> 
+                    <div class="box"></div>
+                    <div class="text">There is something under here.</div>
+                </div>
+                <div class="big-box"> 
+                    <div class="box"></div>
+                    <div class="text">There is something under here.</div>
+                </div>
+                <div class="big-box"> 
+                    <div class="box"></div>
+                    <div class="text">There is something under here.</div>
+                </div>
+                <div class="big-box"> 
+                    <div class="box"></div>
+                    <div class="text">There is something under here.</div>
+                </div>
             </div>
         </div>
 
-    </div>
+        <!-- CONTENT-GRAY -->
+        <div class="content-gray">
+            <div class="quote">“That's for the best. Otherwise they might realize they're in prison. 
+                It can't be helped. You women are used to harems and prisons. A person can spend his whole life between four walls. 
+                If he doesn't think or feel that he's a prisoner, then he's not a prisoner. But then there are people for whom the whole planet is a prison, 
+                who see the infinite expanse of the universe, 
+                the millions of stars and galaxies that remain forever inaccessible to them. 
+                And that awareness makes them the greatest prisoners of time and space.”</div>
+            <div class="signature">-Vladimir Bartol, Alamut</div>
+        </div>
+
+        <!-- BLUE-BOX -->
+        <div class="blue-box">
+            <div class="description">
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for our salvation by clicking the sign up button!</p>
+            </div>
+            <div class="button"><button>Sign up</button></div>        
+        </div>
    
+    </div>
+
+    <!-- FOOTER -->
+    <div class="footer">
+        <div>made by greenmossymoss</div>
+    </div>
+
 </body>
 </html>
